--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "component": "^1.1.0",
     "karma-edge-launcher": "^0.4.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
