--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,15 @@
-# compiled output
-*/dist
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
 # Node
-node_modules
+/node_modules
 npm-debug.log
 yarn-error.log
-
-# Logs
-logs
-*.log
-npm-debug.log*
-pnpm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Tests
-/coverage
-/.nyc_output
 
 # IDEs and editors
 .idea/
@@ -32,7 +20,7 @@ Thumbs.db
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
+# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -40,16 +28,17 @@ Thumbs.db
 !.vscode/extensions.json
 .history/*
 
-# Compiled output
-*/dist
-*/tmp
-*/out-tsc
-*/bazel-out
-
 # Miscellaneous
-*/.angular/cache
+/.angular/cache
 .sass-cache/
-*/connect.lock
-*/coverage
-*/libpeerconnection.log
+/connect.lock
+/coverage
+/libpeerconnection.log
 testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
+
+environment.ts
