--- a/package.json
+++ b/package.json
@@ -1,71 +1,44 @@
 {
   "name": "we4b",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.1--alpha-1",
   "scripts": {
-    "back-prebuild": "cd .\\backend && rimraf dist",
-    "back-build": "cd .\\backend && nest build",
-    "back-start": "cd .\\backend && nest start",
-    "back-start:dev": "cd .\\backend && nest start --watch",
-    "back-start:debug": "cd .\\backend && nest start --debug --watch",
-    "back-start:prod": "cd .\\backend && node dist/main",
-    "front-start": "cd .\\frontend && ng serve",
-    "front-build": "cd .\\frontend && ng build",
-    "watch": "cd .\\frontend && ng build --watch --configuration development",
-    "test": "cd .\\frontend && ng test",
-    "format": "prettier --write \"{backend,frontend}/{src,test}/**/*.ts\"",
-    "lint": "cd .\\backend && eslint \"{src,apps,libs,test}/**/*.ts\" --fix && cd ..\\frontend && eslint \"{src,test}/**/*.ts\" --fix"
+    "ng": "ng",
+    "start": "ng serve --port 80",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Juknum/WE4B.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Juknum/WE4B/issues"
-  },
-  "homepage": "https://github.com/Juknum/WE4B#readme",
+  "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^13.3.5",
-    "@angular/cli": "^13.3.5",
-    "@angular/core": "^13.3.6",
-    "@angular/platform-browser": "^13.3.6",
-    "@angular/platform-browser-dynamic": "^13.3.6",
-    "@angular/router": "^13.3.6",
-    "@nestjs/cli": "^8.2.5",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.0.3",
-    "mysql2": "^2.3.3",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.2.45"
+    "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/fire": "7.4.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/material": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
+    "firebase": "^9.8.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "27.5.0",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular/cli": "~14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@types/jasmine": "~4.0.0",
+    "jasmine-core": "~4.1.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.7.2"
   }
 }
